# Relay_Agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PLANS.md  README.md  codex_e2e_prompt.md  codex_fix_prompt.md  codex_manual_e2e_prompt.md  codex_prompt.md  design-preview-v2.html  design-preview-v3.html  design-preview.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  relay_live_m365_smoke.txt  tasks.md  tsconfig.base.json
.taskmaster/: config.json  state.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  DEV_NOTES.md  build.rs  tauri.conf.json
apps/desktop/src-tauri/assets/templates/: invoice_cleanup.json  monthly_rollup.json  normalize_columns.json  remove_duplicates.json  sales_filter.json
apps/desktop/src-tauri/binaries/: build-copilot-dom-modules.mjs  copilot_dom_poll.mjs  copilot_send_timing.mjs  copilot_send_timing.test.mjs  copilot_server.js  copilot_server.mjs  copilot_server.test.mjs  copilot_wait_dom_response.mjs  copilot_wait_dom_response.test.mjs
apps/desktop/src-tauri/bootstrap/: aionui-relay.json  openwork-opencode.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/api/src/: client.rs
apps/desktop/src-tauri/crates/commands/src/: lib.rs
apps/desktop/src-tauri/crates/compat-harness/: Cargo.toml
apps/desktop/src-tauri/crates/compat-harness/fixtures/: SYNC.txt  mock_parity_scenarios.json
apps/desktop/src-tauri/crates/compat-harness/src/: lib.rs
apps/desktop/src-tauri/crates/desktop-core/: Cargo.toml
apps/desktop/src-tauri/crates/desktop-core/src/: agent_loop.rs  cdp.rs  copilot_adapter.rs  copilot_persistence.rs  copilot_port_reclaim.rs  doctor.rs  error.rs  lib.rs  models.rs  opencode_tools.rs  registry.rs  session_write_undo.rs  workspace_skills.rs  workspace_slash_commands.rs  workspace_surfaces.rs
apps/desktop/src-tauri/crates/onyx-concept/: Cargo.toml  README.md
apps/desktop/src-tauri/crates/onyx-concept/src/: connector.rs  document.rs  index.rs  lib.rs  router.rs
apps/desktop/src-tauri/crates/runtime/: Cargo.toml
apps/desktop/src-tauri/crates/runtime/src/: bash.rs  bash_validation.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  lib.rs  lsp_diagnostics.rs  mcp.rs  mcp_client.rs  mcp_registry.rs  mcp_stdio.rs  oauth.rs  pdf_liteparse.rs  pdf_manip.rs  permissions.rs  prompt.rs  sandbox.rs  search.rs  search_backend.rs  task_registry.rs  tool_hard_denylist.rs  workspace_path.rs
apps/desktop/src-tauri/crates/runtime/src/office/: docx.rs  mod.rs  pptx.rs  xlsx.rs
apps/desktop/src-tauri/crates/tools/: Cargo.toml
apps/desktop/src-tauri/crates/tools/src/: approval.rs  cli_hub.rs  electron_cdp.rs  lib.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/liteparse-runner/: package-lock.json  package.json  parse.mjs
apps/desktop/src-tauri/resources/opencode-runtime/: .gitignore  README.md  bun  manifest.json
apps/desktop/src-tauri/src/: agent_browser_daemon.rs  agent_loop.rs  agent_loop_smoke.rs  agent_projection.rs  app.rs  app_services.rs  approval_store.rs  batch.rs  browser_automation.rs  cdp_copilot.rs  cdp_copilot_partial.rs  config.rs  copilot_client.rs  copilot_persistence.rs  copilot_port_reclaim.rs  copilot_provider.rs  copilot_server.rs  dev_control.rs  doctor.rs  error.rs  execution.rs  file_ops.rs  file_support.rs  hard_cut_agent.rs  integration_tests.rs  ipc_codegen.rs  lib.rs  liteparse_env.rs  lsp_probe.rs  main.rs  mcp_client.rs  models.rs  opencode_runtime.rs  openwork_autostart.rs  openwork_bootstrap.rs  persistence.rs  pipeline.rs  project.rs  quality_validator.rs  read_action_executor.rs  (+24 more)
apps/desktop/src-tauri/src/agent_loop/: approval.rs  compaction.rs  copilot_sanitize.rs  events.rs  executor.rs  mod.rs  orchestrator.rs  permission.rs  prompt.rs  response_parser.rs  retry.rs  state.rs
apps/desktop/src-tauri/src/agent_loop/transport/: copilot.rs  mod.rs  tool_parse.rs
apps/desktop/src-tauri/src/commands/: agent.rs  copilot.rs  diagnostics.rs  mcp.rs  mod.rs  relay.rs
apps/desktop/src-tauri/src/workbook/: csv_backend.rs  engine.rs  inspect.rs  mod.rs  preflight.rs  preview.rs  source.rs  xlsx_backend.rs
apps/desktop/src-tauri/tests/: doctor_cli.rs
docs/: AGENT_EVALUATION_CRITERIA.md  AGENT_FRAMEWORK_ALIGNMENT.md  AGENT_LOOP_DESIGN.md  AGENT_LOOP_E2E_VERIFICATION.md  AIONUI_RELAY_MIGRATION.md  AIONUI_WINDOWS_VALIDATION.md  APP_LAUNCH_TEST_VERIFICATION.md  APP_WORKFLOW_TEST_VERIFICATION.md  ARTIFACT_OUTPUT_DESIGN.md  AUTONOMOUS_EXECUTION_DESIGN.md  AUTONOMOUS_EXECUTION_E2E_VERIFICATION.md  BATCH_DESIGN.md  BATCH_VERIFICATION.md  BROWSER_AUTOMATION.md  BROWSER_AUTOMATION_VERIFICATION.md  CDP_EDGE_FIXES_LOG.md  CLAW_CODE_ALIGNMENT.md  CODEX_PROMPT_01_BROWSER_SETUP.md  CODEX_PROMPT_03_DOCUMENTATION.md  CODEX_PROMPT_04_CONTRACTS_SCHEMA.md  CODEX_PROMPT_07_E2E_VERIFICATION.md  CODEX_PROMPT_08_UI_UX.md  CODEX_PROMPT_09_CDP_PORT_SCAN.md  CODEX_PROMPT_12_DELEGATION_UI.md  CODEX_PROMPT_15_FILE_OPERATIONS.md  CODEX_PROMPT_16_PROJECT_MEMORY.md  CODEX_PROMPT_17_FIXES.md  CODEX_PROMPT_E2E_WINDOWS_FIXES.md  CONTINUITY_VERIFICATION.md  COPILOT_E2E_CDP_PITFALLS.md  COPILOT_INTEGRATION_E2E_VERIFICATION.md  COPILOT_OPENCODE_HARD_CUT_PLAN.md  CUSTOM_SLASH_AND_TEMPLATES.md  DELEGATION_UI_DESIGN.md  DELEGATION_UI_E2E_VERIFICATION.md  E2E_COPILOT_LIVE_REPORT.md  E2E_COWORK_MANUAL_CHECKLIST.md  E2E_WINDOWS_MANUAL_CHECKLIST.md  FILE_OPS_E2E_VERIFICATION.md  FRAMEWORK_NATIVE_CUTOVER.md  (+38 more)
examples/: revenue-workflow-demo.csv
scripts/: agent-golden-smoke.mjs  agent-tool-catalog-smoke.mjs  agui-client-tool-smoke.mjs  agui-replay-smoke.mjs  aionui-release-workflow.test.mjs  aionui-windows-validation-doc.test.mjs  api-tool-ux-smoke.mjs  app-server-artifact-smoke.mjs  app-server-bridge-smoke.mjs  app-server-real-provider-smoke.mjs  apply-aionui-overlay.mjs  apply-aionui-overlay.test.mjs  bridge-workbench-chat-smoke.mjs  bridge-workbench-surface-smoke.mjs  check-hard-cut-guard.mjs  choice-error-reduction-smoke.mjs  copilot-cdp-manager-smoke.mjs  copilot-planners.test.mjs  dci-cited-evidence-read-smoke.mjs  (+80 more)
(+743 files in other folders)
