[workspace]
members = [
    "apps/desktop/src-tauri",
    "apps/desktop/src-tauri/crates/runtime",
    "apps/desktop/src-tauri/crates/tools",
    "apps/desktop/src-tauri/crates/commands",
    "apps/desktop/src-tauri/crates/compat-harness",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
