[package]
name = "relay-agent-desktop"
version = "0.2.0"
edition = "2021"
default-run = "relay-agent-desktop"

[lib]
name = "relay_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
api = { path = "crates/api" }
runtime = { path = "crates/runtime" }
tools = { path = "crates/tools" }
commands = { path = "crates/commands" }

anyhow = "1"
thiserror = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
