[package]
name = "relay-agent-desktop"
version = "0.2.0"
edition = "2021"
default-run = "relay-agent-desktop"

[lib]
name = "relay_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
runtime = { path = "crates/runtime" }
tools = { path = "crates/tools" }
relay_commands = { package = "commands", path = "crates/commands" }

anyhow = "1"
thiserror = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
futures-util = { version = "0.3", features = ["sink"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
tauri = { version = "2.0.0", features = ["test"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
ts-rs = "10"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
