[package]
name = "compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tools = { path = "../tools" }
runtime = { path = "../runtime" }

[dev-dependencies]
serde_json = "1"
relay_agent_desktop_lib = { package = "relay-agent-desktop", path = "../.." }
tokio = { version = "1", features = ["rt", "time"] }

[lints]
workspace = true
