[package]
name = "desktop-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "desktop_core"

[lints]
workspace = true

[dependencies]
runtime = { path = "../runtime" }
tools = { path = "../tools" }

chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
thiserror = "1"
tracing = "0.1"
ts-rs = { version = "10", features = ["no-serde-warnings"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
