[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
base64 = "0.22"
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
glob = "0.3"
num_cpus = "1"
quick-xml = "0.36"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2"
wait-timeout = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
lopdf = "0.35"
zip = "2"

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
